# claude-code-codex-bridge

./: .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  FOLLOW_UPS.md  IDEAS.md  Makefile  README.md  pyproject.toml
.claude/docs/analysis/: 2026-03-03-codex-claude-skills-agents-interop-analysis.md
.claude/docs/patterns/: 2026-03-04-release-procedure.md
.claude/docs/plans/: 2026-03-03-codex-interop-generator-implementation-plan.md  2026-03-03-codex-interop-generator-spec.md  2026-03-04-packaging-and-release-readiness-plan.md  2026-03-08-global-skill-ownership-tracking-plan.md
.github/workflows/: release.yml  test.yml
codex_interop/: README.md  __init__.py  __main__.py  claude_shim.py  cli.py  discover.py  install_launchagent.py  model.py  reconcile.py  render_codex_config.py  state.py  translate_agents.py  translate_skills.py
codex_interop/tests/: __init__.py  conftest.py  test_agents.py  test_claude_shim.py  test_cli.py  test_discovery.py  test_launchagent.py  test_reconcile.py  test_skills.py  test_state.py
docs/: agent-skills-standard.md  claude-code-mcp-reference.md  codex-cli-reference.md  mcp-bridge-mapping.md
packaging/: install.sh.in  release_check.py
src/cc_codex_bridge/: README.md  __init__.py  __main__.py  _colors.py  activity_log.py  bridge_home.py  claude_shim.py  cli.py  config.py  config_check.py  config_exclude_commands.py  config_scan_commands.py  config_scope.py  config_show.py  config_writer.py  discover.py  discover_mcp.py  doctor.py  exclusions.py  frontmatter.py  install_launchagent.py  interactive.py  locking.py  mcp_env_templates.py  mcp_stdio_launcher.py  model.py  reconcile.py  registry.py  release_bundle.py  render.py  render_agent_toml.py  render_codex_config.py  rewrite_references.py  scan.py  state.py  text.py  toml_config.py  translate_agents.py  translate_commands.py  translate_mcp.py  (+4 more)
tests/: __init__.py  conftest.py  test_activity_log.py  test_agents.py  test_bridge_home.py  test_claude_shim.py  test_cli.py  test_commands.py  test_config.py  test_config_check.py  test_config_commands_cli.py  test_config_exclude_commands.py  test_config_scan_commands.py  test_config_scope.py  test_config_show.py  test_config_writer.py  test_discover_mcp.py  test_discovery.py  test_doctor.py  test_exclusions.py  test_interactive.py  test_launchagent.py  test_mcp_env_templates.py  test_mcp_model.py  test_multi_source.py  test_package.py  test_prompts.py  test_reconcile.py  test_reconcile_mcp.py  test_registry.py  test_release_bundle.py  test_release_check.py  test_render.py  test_rewrite_references.py  test_scan.py  test_scenarios.py  test_skills.py  test_state.py  test_toml_config.py  test_translate_mcp.py  (+2 more)
