[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-codex-bridge"
version = "0.1.0"
description = "Generate Codex interop artifacts from installed Claude Code plugins."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Vlad Olaru" }]
dependencies = []

[project.scripts]
cc-codex-bridge = "cc_codex_bridge.cli:main"

[tool.setuptools]
include-package-data = false
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cc_codex_bridge"]
