[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-codex-bridge"
version = "0.19.5"
description = "Bridge a local Claude Code setup into Codex-compatible artifacts."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Vlad Olaru" }]
dependencies = [
  "PyYAML>=6.0",
  "tomli-w>=1.0",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/vladolaru/claude-code-codex-bridge"
Repository = "https://github.com/vladolaru/claude-code-codex-bridge.git"
Issues = "https://github.com/vladolaru/claude-code-codex-bridge/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[project.scripts]
cc-codex-bridge = "cc_codex_bridge.cli:main"

[tool.setuptools]
include-package-data = false
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cc_codex_bridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
